--- a/config.toml
+++ b/config.toml
@@ -39,4 +39,8 @@ paginate = 5
         identifier = "about"
         name = "About"
         url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "anything"
+        name = "Anything"
+        url = "/netlify/anything"
 
